--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "add": "^2.0.6",
+    "axios": "^1.4.0",
     "i18next": "^23.4.6",
     "react": "18.2.0",
     "react-i18next": "^13.2.0",
@@ -26,6 +27,7 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-svg": "^13.13.0",
+    "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.2",
     "yarn": "^1.22.19"
   },
