--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "add": "^2.0.6",
     "axios": "^1.4.0",
+    "formik": "^2.4.3",
     "i18next": "^23.4.6",
     "react": "18.2.0",
     "react-i18next": "^13.2.0",
@@ -29,7 +30,8 @@
     "react-native-svg": "^13.13.0",
     "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.2",
-    "yarn": "^1.22.19"
+    "yarn": "^1.22.19",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
